--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "test": "ng test",
+    "test": "grunt test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "build.prod": "ng build --aot --prod --progress false --base-href \"https://thakugan.github.io/JennLe/\""
@@ -26,6 +26,11 @@
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "express": "^4.15.3",
+    "grunt": "^1.0.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-karma": "^2.0.0",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-phantomjs-launcher": "^1.0.4",
     "rxjs": "^5.1.0",
     "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
