--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 
 node_js:
-  - "7"
+  - "6.9.4"
+
+dist: trusty
 
 branches:
   only:
@@ -13,6 +15,10 @@ addons:
 cache:
   directories:
     - node_modules
+
+before_install:
+  - # start your web application and listen on `localhost`
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost
 
 before_script:
   - 'npm install -g grunt-cli'
