--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "grunt-contrib-watch": "^1.0.0",
     "grunt-karma": "^2.0.0",
     "hammerjs": "^2.0.8",
+    "karma-phantomjs-launcher": "^1.0.4",
     "rxjs": "^5.1.0",
     "web-animations-js": "^2.2.5",
     "zone.js": "^0.8.4"
