--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "grunt test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build.prod": "ng build --aot --prod --progress false --base-href \"https://jennle.com/\""
+    "build.prod": "ng build --aot --prod --progress false --base-href \"http://jennle.com/\""
   },
   "private": true,
   "dependencies": {
