--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "grunt test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build.prod": "ng build --aot --env=prod --progress false --base-href \"http://jennle.com/\""
+    "build.prod": "ng build --aot --prod --progress false --base-href \"http://jennle.com/\""
   },
   "private": true,
   "dependencies": {
@@ -17,22 +17,17 @@
     "@angular/animations": "^4.3.1",
     "@angular/common": "^4.3.1",
     "@angular/compiler": "^4.3.1",
-    "@angular/compiler-cli": "^4.3.1",
     "@angular/core": "^4.3.1",
     "@angular/forms": "^4.3.1",
     "@angular/http": "^4.3.1",
     "@angular/platform-browser": "^4.3.1",
     "@angular/platform-browser-dynamic": "^4.3.1",
     "@angular/router": "^4.3.1",
-    "angular-bootstrap-md": "^4.1.0",
-    "bootstrap": "^4.0.0-alpha.6",
-    "chart.js": "^2.5.0",
-    "classlist.js": "^1.1.20150312",
+    "angular-bootstrap-md": "^4.2.0",
+    "chart.js": "2.5.0",
     "core-js": "^2.4.1",
     "easy-pie-chart": "^2.1.7",
-    "express": "^4.15.3",
     "font-awesome": "^4.7.0",
-    "fontawesome": "^4.7.2",
     "grunt": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
     "grunt-karma": "^2.0.0",
@@ -44,7 +39,7 @@
   },
   "devDependencies": {
     "@angular/cli": "1.3.0",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/compiler-cli": "^4.3.4",
     "@types/jasmine": "2.5.38",
     "@types/node": "~6.0.60",
     "codelyzer": "~2.0.0",
@@ -58,7 +53,6 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "karma-junit-reporter": "^1.2.0",
     "karma-safari-launcher": "^1.0.0",
-    "node-sass": "^4.5.3",
     "protractor": "~5.1.0",
     "ts-node": "~2.0.0",
     "tslint": "~4.5.0",
