--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "^4.3.1",
     "angular-bootstrap-md": "^4.2.0",
     "chart.js": "2.5.0",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "easy-pie-chart": "^2.1.7",
     "font-awesome": "^4.7.0",
