--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "my-app",
+  "homepage" : "http://jennle.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +11,7 @@
   },
   "scripts": {
     "start": "NODE_PATH=src:src/components:src/containers react-scripts start",
-    "build": "react-scripts build",
+    "build": "NODE_PATH=src:src/components:src/containers react-scripts build",
     "test": "NODE_PATH=src react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
