--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ deploy:
   skip_cleanup: true
   fqdn: 'jennle.com'
   github_token: $GITHUB_TOKEN
-  local_dir: dist
+  local_dir: build
   on:
     branch: master
