--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "homepage": "http://jennle.com",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "bootstrap": "^3.3.7",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.3",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13"
-  },
   "scripts": {
     "start": "NODE_PATH=src:src/components:src/containers react-scripts start",
     "build": "NODE_PATH=src:src/components:src/containers react-scripts build",
     "test": "NODE_PATH=src react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.7",
+    "grunt-cli": "^1.2.0",
+    "node-sass": "^4.5.3",
+    "react": "^15.6.1",
+    "react-bootstrap": "^0.31.3",
+    "react-dom": "^15.6.1",
+    "react-scripts": "1.0.13"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-cssmin": "^2.2.0",
+    "grunt-contrib-sass": "^1.0.0"
   }
 }
