Added sass to travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,10 @@ branches:
 cache:
   directories:
     - node_modules
-    
+
+before_install:
+  - gem install sass
+
 script:
   - grunt
   - npm test
