--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "NODE_PATH=src:src/components:src/containers react-scripts start",
-    "build": "NODE_PATH=src:src/components:src/containers react-scripts build",
-    "test": "NODE_PATH=src react-scripts test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest",
+    "test-watch": "jest --watch",
+    "test-ci": "jest --runInBand",
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0-beta.2",
     "grunt-cli": "^1.2.0",
-    "node-sass": "^4.5.3",
+    "jquery": "^1.9.1",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   },
   "devDependencies": {
