--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "bootstrap": "^4.0.0-beta.2",
     "jquery": "^1.9.1",
     "react": "^15.6.1",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.13"
   }
