--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,6 @@ deploy:
   skip_cleanup: true
   fqdn: 'jennle.com'
   github_token: $GITHUB_TOKEN
-  local_dir: build
+  local_dir: public
   on:
     branch: master
