--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sass": "^1.0.23",
-    "gatsby-plugin-typography": "^1.7.18",
-    "react-helmet": "^5.2.0",
-    "typography-theme-moraga": "^0.15.10"
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "build": "gatsby build",
