Saved social icons as svg

--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "gatsby-link": "^1.6.39",
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-sass": "^1.0.23",
-    "react-helmet": "^5.2.0",
-    "react-icons": "^2.2.7"
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "build": "gatsby build",
