--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "webpack": "^2.7.0"
   },
   "scripts": {
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
