--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "jenn-le",
   "homepage": "http://jennle.com",
+  "description": "My personal website",
+  "repository": "https://github.com/thakugan/jenn-le",
   "version": "1.0.0",
+  "license": "MIT",
   "dependencies": {
-    "gatsby": "^1.9.253",
-    "gatsby-link": "^1.6.41",
-    "gatsby-plugin-react-helmet": "^2.0.11",
+    "gatsby": "^1.9.247",
+    "gatsby-link": "^1.6.40",
+    "gatsby-plugin-react-helmet": "^2.0.10",
     "gatsby-plugin-sass": "^1.0.26",
-    "react-helmet": "^5.2.0",
-    "webpack": "^2.7.0"
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "build": "gatsby build",
@@ -17,6 +19,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "prettier": "^1.11.1"
+    "prettier": "^1.12.0"
   }
 }
