testing with global gatsby install

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jenn-le",
-  "homepage": "http://jennle.com",
+  "homepage": "https://jennle.com",
   "description": "My personal website",
   "repository": "https://github.com/thakugan/jenn-le",
   "version": "1.0.0",
@@ -19,6 +19,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "prettier": "^1.12.0"
   }
 }
