--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "react-helmet": "^5.2.0"
   },
   "scripts": {
-    "patch":
-      "sed -i -e 's/if(c\\.initial) return;/if(!c||c.initial) return;/g' ./node_modules/extract-text-webpack-plugin/index.js",
-    "build": "npm run patch && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --write 'src/**/*.js'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "gh-pages": "^1.1.0",
     "prettier": "^1.12.0"
   }
 }
