--- a/package.json
+++ b/package.json
@@ -1,24 +1,40 @@
 {
   "name": "jenn-le",
-  "homepage": "https://jennle.com",
+  "private": false,
   "description": "My personal website",
-  "repository": "https://github.com/thakugan/jenn-le",
-  "version": "1.0.0",
-  "license": "MIT",
+  "version": "0.1.0",
+  "author": "Jenn Le <jennle@pm.me>",
   "dependencies": {
-    "gatsby": "^1.9.247",
-    "gatsby-link": "^1.6.40",
-    "gatsby-plugin-react-helmet": "^2.0.10",
-    "gatsby-plugin-sass": "^1.0.26",
-    "react-helmet": "^5.2.0"
+    "gatsby": "^2.15.28",
+    "gatsby-image": "^2.2.23",
+    "gatsby-plugin-manifest": "^2.2.20",
+    "gatsby-plugin-offline": "^3.0.11",
+    "gatsby-plugin-react-helmet": "^3.1.10",
+    "gatsby-plugin-sharp": "^2.2.27",
+    "gatsby-source-filesystem": "^2.1.28",
+    "gatsby-transformer-sharp": "^2.2.19",
+    "prop-types": "^15.7.2",
+    "react": "^16.10.0",
+    "react-dom": "^16.10.0",
+    "react-helmet": "^5.2.1"
   },
+  "devDependencies": {
+    "prettier": "^1.18.2"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \""
   },
-  "devDependencies": {
-    "prettier": "^1.12.0"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Thakugan/jenn-le"
   }
 }
